# askme

./: .dependency-cruiser.js  .gitignore  .prettierrc  Dockerfile  README.md  deps.md  docker-compose.yml  main.py  package.json  pnpm-lock.yaml  pyproject.toml  report.json  turbo.json  vitest.config.ts
api/: __init__.py  routes.py
apps/askme-app/: astro.config.mjs  package.json  tsconfig.json
apps/askme-app/mocks/critical_reachability_report/: code.html
apps/askme-app/mocks/dependency_health_report/: code.html
apps/askme-app/mocks/landing_upload_screen/: code.html
apps/askme-app/mocks/license_compliance_report/: code.html
apps/askme-app/src/components/: Welcome.astro
apps/askme-app/src/layouts/: Layout.astro
apps/askme-app/src/pages/: critical-reachability-report.astro  critical-reachability-report.page.astro  critical_reachability_report.astro  dependency-health-report.astro  dependency_health_report.astro  index.astro  landing_upload_screen.astro  license-compliance-report.astro  (+1 more)
apps/askme-server/: .env.example  package.json
apps/askme-server/src/: Scanner.ts  VulnerabilityScanner.service.ts  app.controller.ts  app.module.ts  app.service.ts  cli.ts
apps/docs/: package.json
apps/web/: package.json
docs/: design.prd.md  impact-analysis.md  prd.md  vulnerability-analysis-cve-advisory.md
rag/: __init__.py  embeddings.py  ingest.py  llm.py  pipeline.py  settings.py  vector_store.py
services/initial-debug/: package.json  tsconfig.json  vite.config.ts
services/initial-debug/src/: CveReport.ts  Scanner.test.ts  Scanner.ts
tests/: test_api.py
(+58 files in other folders)
