[project]
name = "smallm-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.3"
dependencies = [
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "llama-cpp-python>=0.3.16",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "langchain-text-splitters>=1.1.1",
    "pydantic-settings>=2.13.1",
    "langchain-huggingface>=1.2.1",
]
